[package]
name = "diskviz"
version = "0.1.0"
edition = "2021"

[dependencies]
iced = { version = "0.12", features = ["tokio", "advanced", "lazy"] }
tokio = { version = "1.39", features = ["rt-multi-thread", "macros", "fs"] }
futures = "0.3.30"
walkdir = "2.5.0"
ignore = "0.4.22"
rayon = "1.10.0"
blake3 = "1.5.4"
xxhash-rust = { version = "0.8.10", features=["xxh3"] }
humansize = "2.1.3"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
thiserror = "1.0.63"
anyhow = "1.0.89"
directories = "5.0.1"
trash = "5.0.0"
chrono = { version = "0.4.38", features = ["serde"] }
csv = "1.3.0"
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt"] }
tracing-appender = "0.2.3"
rfd = "0.14"

[dev-dependencies]
pretty_assertions = "1.4.0"
tempfile = "3.10.1"
assert_fs = "1.1.1"
